# registry

./: .bazelignore  .bazelrc  AGENTS.md  BUILD.bazel  MODULE.bazel
.agents/skills/commit/: SKILL.md
.agents/skills/pr/: SKILL.md
platform/: status.sh
system/git/: BUILD.bazel  rules.bzl
system/git/hooks/: commit-msg  pre-rebase
system/test/: rules.bzl
